- NEW: Ignoring of multiple selected items by their extension. See
       issue #423 for details. (Stefan)
- CHG: The right-drag context menu now only shows "Export" if a versioned
       folder is dragged (for files, the windows 'copy' does the same). (Stefan)
- CHG: The right-drag context menu checks whether source and target are
       from the same repository and shows the "SVN move" and "SVN copy"
       commands only if they are. (Stefan)
- CHG: When only files are selected for "Add", the Add-dialog is not
       shown anymore but the files are added immediately. (Stefan)
- CHG: file:// access to BDB based repositories is no longer supported. (Stefan)
- CHG: the log dialog now shows a possible error message when fetching the
       log as a text in the top list control instead of showing a popup
       message box. (Stefan)

Version 1.5.3
- CHG: enabled rc4 encryption for the sasl dlls. (Stefan)
- BUG: some context menu entries were shown if multiple items were
       selected even if they only work on single items. (Stefan)
- BUG: the move/copy right-drag menus were not shown if the target
       folder was added but not yet committed. (Stefan)

Version 1.5.2
- BUG: the "SVN Copy and Add" right-drag menu was not shown. (Stefan)
- BUG: Editing a conflict during a merge resulted in a crash.
       Note: this is only a workaround for a bug in the svn library which
       won't work in all situations. (Stefan)
- BUG: Log cache CSV export: fix record line endings. (Stefan Fuhrmann)
- BUG: Log cache CSV export: user revprops list incomplete. (Stefan Fuhrmann)
- BUG: The "save revision to..." context menu in the log dialog was shown
       even if multiple revisions were selected. (Stefan)

Version 1.5.1
- CHG: The saslDIGESTMD5.dll has now encryption enabled. (Stefan)
- CHG: TortoiseProc allows now relative paths too. (Stefan)
- BUG: The installer always installed the feature "associate .patch files